update infor
