# server/docs/swagger.yml
@@ -143,3 +143,46 @@ paths:
             description: Server Internal error
       tags:
         - Users
+  /api/v1/users/update/{id}:
+    put:
+      summary: Update user information
+      description: |
+          Update user information
+      parameters:
+        - name: id
+          in: path
+          description: User Id
+          required: true
+          type: string
+          format: string
+        - name: password
+          in: formData
+          description: password for login
+          required: true
+          type: string
+          format: string
+        - name: firstname
+          in: formData
+          description: firstname for new user
+          required: true
+          type: string
+          format: string
+        - name: lastname
+          in: formData
+          description: firstname for new user
+          required: true
+          type: string
+          format: string
+      responses:
+        200:
+            description: Returns user info
+        401:
+            description: Unauthorized
+        400:
+            description: Bad Request
+        406:
+            description: Not Acceptable
+        500:
+            description: Server Internal error
+      tags:
+        - Users
